[package]
name = "itsuki"
version = "0.1.0"
edition = "2021"
description = ""
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
documentation = "https://docs.rs/itsuki/"
homepage = "https://github.com/lusingander/itsuki"
repository = "https://github.com/lusingander/itsuki"
readme = "README.md"
license = "MIT"
keywords = ["enum", "macro"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.55", features = ["full"] }
