[package]
name = "itsuki"
version = "0.2.0"
edition = "2021"
description = "macro that defines a simple zero-based sequential enum"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
documentation = "https://docs.rs/itsuki/"
homepage = "https://github.com/lusingander/itsuki"
repository = "https://github.com/lusingander/itsuki"
readme = "README.md"
license = "MIT"
keywords = ["enum", "macro"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
